--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 
     api "android.arch.lifecycle:extensions:$lifecycle_version"
     api 'com.android.support.constraint:constraint-layout:1.1.3'
-    api 'com.android.support:appcompat-v7:28.0.0-rc02'
+    api 'com.android.support:appcompat-v7:28.0.0'
     api 'com.google.android.material:material:1.0.0'
 
     api "com.google.android.gms:play-services-nearby:$nearby_version"
