--- a/things/src/main/AndroidManifest.xml
+++ b/things/src/main/AndroidManifest.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.codecentral.sid" >
+          package="com.codecentral.sid">
 
-    <application android:label="@string/app_name" >
-        <uses-library android:name="com.google.android.things" />
+    <application
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Sid">
 
-        <activity android:name=".MainActivity" >
+        <uses-library android:name="com.google.android.things"/>
+
+        <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <!-- Make this the first activity that is displayed when the device boots. -->
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.HOME" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.HOME"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
     </application>
