--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         kotlin_version = "1.2.61"
-        lifecycle_version = "2.0.0-beta01"
+        lifecycle_version = "2.0.0"
         nearby_version = '15.0.1'
     }
     repositories {
