--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.codecentral.sid"
+        applicationId "com.codecentral.sid.companion"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
