--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
@@ -19,9 +21,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    api "android.arch.lifecycle:extensions:$lifecycle_version"
-    api 'com.android.support.constraint:constraint-layout:1.1.3'
-    api 'com.android.support:appcompat-v7:28.0.0'
+    api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api 'androidx.appcompat:appcompat:1.0.0'
     api 'com.google.android.material:material:1.0.0'
 
     api "com.google.android.gms:play-services-nearby:$nearby_version"
