config(nearby): Add BuildConfig usage for determining robot nickname

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -18,6 +18,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "ENDPOINT_NAME", "Sid the Robot Companion App"
+        }
+        debug {
+            buildConfigField "String", "ENDPOINT_NAME", "Sid the Robot Companion App"
         }
     }
     compileOptions {
