--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -13,6 +13,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "ENDPOINT_NAME", "Sid the Robot (Base)"
+        }
+        debug {
+            buildConfigField "String", "ENDPOINT_NAME", "Sid the Robot (Base)"
         }
     }
     compileOptions {
