--- a/things/build.gradle
+++ b/things/build.gradle
@@ -18,6 +18,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "ENDPOINT_NAME", "Sid the Robot"
+        }
+        debug {
+            buildConfigField "String", "ENDPOINT_NAME", "Sid the Robot"
         }
     }
     compileOptions {
