--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -18,10 +18,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "ENDPOINT_NAME", "Sid the Robot Companion App"
+            buildConfigField "String", "DEVICE_NICKNAME", "Sid the Robot Companion App"
         }
         debug {
-            buildConfigField "String", "ENDPOINT_NAME", "Sid the Robot Companion App"
+            buildConfigField "String", "DEVICE_NICKNAME", "Sid the Robot Companion App"
         }
     }
     compileOptions {
