--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -13,10 +13,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "DEVICE_NICKNAME", "Sid the Robot (Base)"
+            buildConfigField "String", "DEVICE_NICKNAME", "\"Sid the Robot (Base)\""
         }
         debug {
-            buildConfigField "String", "DEVICE_NICKNAME", "Sid the Robot (Base)"
+            buildConfigField "String", "DEVICE_NICKNAME", "\"Sid the Robot (Base)\""
         }
     }
     compileOptions {
