--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.codecentral.sid.companion">
 
     <application
@@ -9,13 +10,23 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:name=".SidCompanionApplication"
             android:supportsRtl="true"
-            android:theme="@style/Theme.Sid">
+            android:theme="@style/Theme.Sid"
+            tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name=".DashboardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".ui.pairing.CompanionPairingActivity">
+            <intent-filter>
+                <action android:name="com.codecentral.sid.action.START_PAIRING"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
     </application>
