--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -8,9 +8,8 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
-    <application>
-        <activity android:name=".ui.nearby.NearbyConnectionActivity">
-        </activity>
+    <application
+            android:label="@string/app_name">
     </application>
 
 </manifest>
